Adding the timer

--- a/game.html
+++ b/game.html
@@ -59,7 +59,22 @@
 			<div id="end">E</div>
 
 		</div>
-
+		
+		<!-- Timer section -->
+		<div class="timer-div">
+			<div class="live">
+				<div>live</div>
+				<div class="timer" id="live-round"></div> 
+			</div>
+			<div class="last">
+				<div>last</div>
+				<div class="timer" id="last-round"></div> 
+			</div>
+			<div class="best">
+				<div>best</div>
+				<div class="timer" id="best-round"></div> 
+			</div>
+		</div>
 		
 
 		<p>
